# mecsim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
engine/: parameters.hpp  sim_object.hpp  sim_scene.hpp  vertices.cpp  vertices.hpp
examples/: 2dscene.cpp  main.cpp
physics/: ForceGenerator.cpp  ForceGenerator.hpp  LinearSolver.cpp  LinearSolver.hpp  OdeSolver.cpp  OdeSolver.hpp  Particle.hpp  RigidBody.hpp  System.cpp  System.hpp  collisions.cpp  collisions.hpp  util.cpp  util.hpp  vector2.hpp
render/: Animator.cpp  Animator.hpp  ShapeBuffer.hpp  camera.hpp  glfw_window.hpp  renderer.hpp  scene.hpp  shader.hpp  shapes.hpp  vao.cpp  vao.hpp
shaders/: circle_shader.ft.glsl  circle_shader.vx.glsl  shader.ft.glsl  shader.vx.glsl
